@@ -4,6 +4,7 @@ Changes in Release 2.5.0
 [JOST-145] - can not create policy file with EnvironmentAttributeDesignator tag
 [JOST-147] - Add support for MDUI extensions into OpenSAML2
 [JOST-149] - SubjectTypeImplBuilder typo causes invalid documents to be built
+           - Fix up some potential concurrency issues with metadata provders and filters
 
 Changes in Release 2.4.1
 =============================================
